<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/v_title"
        android:orientation="vertical"
        android:paddingLeft="@dimen/welcome_block_paddingLeft"
        android:paddingRight="@dimen/welcome_block_paddingLeft"
        android:paddingTop="@dimen/welcome_block_paddingTop">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/welcome_text_marginLeft"
            android:text="第二步"
            android:textColor="@color/exchangebed_textColor"
            android:textSize="@dimen/welcome_big_textSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/welcome_block_left_width"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/welcome_text_marginLeft"

                    android:text="@string/register_service"
                    android:textColor="@color/exchangebed_textColor"
                    android:textSize="@dimen/welcome_normal_textSize" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/welcome_text_line_spacing"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/welcome_text_marginLeft"
                        android:layout_height="wrap_content"
                        android:src="@drawable/register_arrow" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_hospital"
                        android:textColor="@color/setting_title"
                        android:textSize="@dimen/welcome_normal_textSize" />


                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/welcome_text_marginLeft"
                    android:layout_marginTop="@dimen/welcome_text_line_spacing"
                    android:text="@string/register_office"
                    android:textColor="@color/exchangebed_textColor"
                    android:textSize="@dimen/welcome_normal_textSize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/welcome_text_marginLeft"
                    android:layout_marginTop="@dimen/welcome_text_line_spacing"
                    android:text="@string/register_wechat"
                    android:textColor="@color/exchangebed_textColor"
                    android:textSize="@dimen/welcome_normal_textSize" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/welcome_text_marginLeft"
                    android:layout_marginTop="@dimen/welcome_text_line_spacing"
                    android:text="@string/register"
                    android:textColor="@color/exchangebed_textColor"
                    android:textSize="@dimen/welcome_normal_textSize" />


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>



    <TextView
        android:layout_centerInParent="true"
        android:id="@+id/tv_hosname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="150dp"
        android:textColor="@color/black"
        android:textColorHint="#dfdfdf"
        android:textSize="@dimen/welcome_big_textSize" />


</RelativeLayout>