<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/welcome_block_paddingLeft"
        android:paddingRight="@dimen/welcome_block_paddingLeft"
        android:paddingTop="@dimen/welcome_block_paddingTop">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/welcome_text_marginLeft"
            android:text="第四步"
            android:textColor="@color/exchangebed_textColor"
            android:textSize="@dimen/welcome_big_textSize" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/welcome_block_left_width"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/welcome_text_marginLeft"
                    android:text="@string/register_service"
                    android:textColor="@color/exchangebed_textColor"
                    android:textSize="@dimen/welcome_normal_textSize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/welcome_text_marginLeft"
                    android:layout_marginTop="@dimen/welcome_text_line_spacing"
                    android:text="@string/register_hospital"
                    android:textColor="@color/exchangebed_textColor"
                    android:textSize="@dimen/welcome_normal_textSize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/welcome_text_marginLeft"
                    android:layout_marginTop="@dimen/welcome_text_line_spacing"
                    android:text="@string/register_office"
                    android:textColor="@color/exchangebed_textColor"
                    android:textSize="@dimen/welcome_normal_textSize" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/welcome_text_line_spacing"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/welcome_text_marginLeft"
                        android:layout_height="wrap_content"
                        android:src="@drawable/register_arrow" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_wechat"
                        android:textColor="@color/setting_title"
                        android:textSize="@dimen/welcome_normal_textSize" />


                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/welcome_text_marginLeft"
                    android:layout_marginTop="@dimen/welcome_text_line_spacing"
                    android:text="@string/register"
                    android:textColor="@color/exchangebed_textColor"
                    android:textSize="@dimen/welcome_normal_textSize" />


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/iv_qrcode"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_centerInParent="true"
        android:src="@drawable/qrcode" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/iv_qrcode"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:paddingLeft="20dp"
        android:text="清扫描二维码，关注微信公众账号"
        android:textColor="@color/exchangebed_textColor"
        android:textSize="@dimen/welcome_small_textSize" />


</RelativeLayout>