<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="1dp"
    android:background="@drawable/round"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/window_activity_title_height"
        android:background="@color/note_bgcolor"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_exchangebed_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/note_title"
            android:textColor="@color/white"
            android:textSize="@dimen/exchangebed_title_textSize" />

        <TextView
            android:id="@+id/tv_exchangebed_title_e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/tv_exchangebed_title"
            android:text="@string/note_title_e"
            android:textColor="@color/white"
            android:textSize="@dimen/exchangebed_title_textSize" />

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:clickable="true"
            android:src="@drawable/close" />

    </RelativeLayout>

    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:gravity="left"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="18sp" />


    <Button
        android:id="@+id/btn_save"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="right"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="20dp"
        android:background="@color/note_bgcolor"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="22sp" />


</LinearLayout>
